add new handler with codegen
